# classpulse360

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: exception_handlers.py  pagination.py  responses.py  router.py
backend/app/common/: enums.py
backend/app/core/: config.py  security.py
backend/app/database/: base.py  engine.py  session.py
backend/app/exceptions/: __init__.py  base.py  business.py  database.py  resource.py  validation.py
backend/app/models/: __init__.py  institution.py  participant.py  question.py  quiz.py  quiz_question.py  response.py  session.py  subject.py  topic.py  user.py
backend/app/repositories/: __init__.py  base.py  institution_repository.py  participant_repository.py  question_repository.py  quiz_question_repository.py  quiz_repository.py  response_repository.py  session_repository.py  subject_repository.py  topic_repository.py  user_repository.py
backend/app/schemas/: __init__.py  institution.py  participant.py  question.py  quiz.py  quiz_question.py  response.py  session.py  subject.py  topic.py  user.py
backend/app/services/: __init__.py  auth_service.py  institution_service.py  participant_service.py  question_service.py  quiz_service.py  session_service.py  storage_service.py  (+3 more)
backend/classpulse360_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: helpers.py  seed.py  seed_institutions.py  seed_questions.py  seed_quizzes.py  seed_sessions.py  seed_subjects.py  seed_topics.py  seed_users.py
backend/tests/: conftest.py
(+66 files in other folders)
