[project]
name = "classpulse360-backend"
version = "0.1.0"
description = "Real-time classroom engagement and assessment platform backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "sqlalchemy>=2.0.31",
    "pydantic-settings>=2.3.4",
    "pydantic>=2.7.4",
    "uvicorn[standard]>=0.30.1",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "email-validator>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.2",
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.0",
]
