[project]
name = "classpulse360-backend"
version = "0.1.0"
description = "Real-time classroom engagement and assessment platform backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "sqlalchemy>=2.0.31",
    "pydantic-settings>=2.3.4",
    "pydantic>=2.7.4",
    "uvicorn[standard]>=0.30.1",
    "psycopg2-binary>=2.9.9",
    "email-validator>=2.0.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.2",
    "python-multipart>=0.0.9",
    "faker>=25.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.2",
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]
